fix: fix contrast for support-success-inverse

--- a/less/themes.less
+++ b/less/themes.less
@@ -221,7 +221,7 @@
 	--support-warning: @yellow-30;
 	--support-info: @blue-70;
 	--support-error-inverse: @red-50;
-	--support-success-inverse: @green-40;
+	--support-success-inverse: @green-50;
 	--support-warning-inverse: @yellow-30;
 	--support-info-inverse: @blue-50;
 	--support-caution-minor: @yellow-30;
@@ -356,7 +356,7 @@
 	--support-warning: @yellow-30;
 	--support-info: @blue-50;
 	--support-error-inverse: @red-60;
-	--support-success-inverse: @green-50;
+	--support-success-inverse: @green-60;
 	--support-warning-inverse: @yellow-30;
 	--support-info-inverse: @blue-60;
 	--support-caution-minor: @yellow-30;
